--- a/web/package.json
+++ b/web/package.json
@@ -12,20 +12,29 @@
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "dependencies": {
+    "@rebass/forms": "^4.0.6",
     "@sanity/block-content-to-react": "^2.0.7",
-    "@sanity/image-url": "^0.140.15",
+    "@sanity/image-url": "^0.140.18",
+    "@theme-ui/color": "^0.3.1",
+    "@theme-ui/typography": "^0.3.0",
     "date-fns": "^1.30.1",
+    "deepmerge": "^4.2.2",
     "gatsby": "^2.9.11",
     "gatsby-image": "^2.0.41",
     "gatsby-plugin-postcss": "^2.0.7",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-source-sanity": "^4.0.1",
-    "postcss-font-magician": "^2.3.1",
+    "ramda": "^0.27.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.8.0",
-    "react-player": "^1.14.2"
+    "react-player": "^1.14.2",
+    "rebass": "^4.0.7",
+    "theme-ui": "^0.3.1"
   },
   "devDependencies": {
     "dotenv": "^8.0.0",
@@ -37,9 +46,6 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-standard": "^4.0.0",
-    "postcss-import": "^12.0.1",
-    "postcss-preset-env": "^6.6.0",
-    "prettier-eslint-cli": "^4.7.1",
     "rimraf": "^2.6.3"
   }
 }
