--- a/web/package.json
+++ b/web/package.json
@@ -26,7 +26,9 @@
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-theme-ui": "^0.3.0",
+    "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-source-sanity": "^4.0.1",
+    "gsap": "^3.5.1",
     "ramda": "^0.27.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
