--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@rebass/forms": "^4.0.6",
     "@sanity/block-content-to-react": "^2.0.7",
-    "@sanity/image-url": "^0.140.18",
+    "@sanity/image-url": "^0.140.19",
     "@theme-ui/color": "^0.3.1",
     "@theme-ui/typography": "^0.3.0",
     "date-fns": "^1.30.1",
@@ -27,6 +27,7 @@
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-plugin-transition-link": "^1.20.5",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-sanity": "^4.0.1",
     "gsap": "^3.5.1",
     "ramda": "^0.27.0",
