--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "dependencies": {
+    "@loadable/component": "^5.14.1",
     "@rebass/forms": "^4.0.6",
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/image-url": "^0.140.19",
@@ -21,8 +22,6 @@
     "deepmerge": "^4.2.2",
     "gatsby": "^2.9.11",
     "gatsby-image": "^2.0.41",
-    "gatsby-plugin-postcss": "^2.0.7",
-    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-theme-ui": "^0.3.0",
