--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "deepmerge": "^4.2.2",
     "gatsby": "^2.9.11",
     "gatsby-image": "^2.0.41",
+    "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-theme-ui": "^0.3.0",
@@ -32,7 +33,7 @@
     "ramda": "^0.27.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0",
+    "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
     "react-player": "^1.14.2",
     "rebass": "^4.0.7",
