--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "gatsby": "^2.9.11",
     "gatsby-image": "^2.0.41",
     "gatsby-omni-font-loader": "^2.0.2",
+    "gatsby-plugin-manifest": "^4.24.0",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-theme-ui": "^0.3.0",
