--- a/web/package.json
+++ b/web/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "sanity-gatsby-portfolio-web",
   "version": "1.0.0",
-  "author": "Sanity <hello@sanity.io>",
+  "author": "Lalaine Ulit-Destajo",
   "scripts": {
     "build": "gatsby build",
     "clean-cache": "gatsby clean",
@@ -12,44 +12,44 @@
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "dependencies": {
-    "@loadable/component": "^5.14.1",
+    "@loadable/component": "^5.15.3",
     "@rebass/forms": "^4.0.6",
-    "@sanity/block-content-to-react": "^2.0.7",
-    "@sanity/image-url": "^0.140.19",
-    "@theme-ui/color": "^0.3.1",
-    "@theme-ui/typography": "^0.3.0",
-    "date-fns": "^1.30.1",
-    "deepmerge": "^4.2.2",
-    "gatsby": "^2.9.11",
-    "gatsby-image": "^2.0.41",
+    "@sanity/block-content-to-react": "^3.0.0",
+    "@sanity/image-url": "^1.0.2",
+    "@theme-ui/color": "^0.15.4",
+    "@theme-ui/typography": "^0.15.4",
+    "date-fns": "^2.29.3",
+    "deepmerge": "^4.3.0",
+    "gatsby": "^5.5.0",
+    "gatsby-codemods": "^4.5.0",
+    "gatsby-image": "^3.11.0",
     "gatsby-omni-font-loader": "^2.0.2",
-    "gatsby-plugin-manifest": "^4.24.0",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-theme-ui": "^0.3.0",
-    "gatsby-plugin-transition-link": "^1.20.5",
+    "gatsby-plugin-image": "^3.5.0",
+    "gatsby-plugin-manifest": "^5.5.0",
+    "gatsby-plugin-react-svg": "^3.3.0",
+    "gatsby-plugin-sanity-image": "^0.13.3",
+    "gatsby-plugin-theme-ui": "^0.15.4",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-source-sanity": "^4.0.1",
-    "gsap": "^3.5.1",
-    "ramda": "^0.27.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1",
-    "react-icons": "^3.8.0",
-    "react-player": "^1.14.2",
+    "gatsby-source-sanity": "^7.6.2",
+    "gsap": "^3.11.4",
+    "ramda": "^0.28.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-icons": "^4.7.1",
+    "react-player": "^2.11.0",
     "rebass": "^4.0.7",
-    "theme-ui": "^0.3.1"
+    "theme-ui": "^0.15.4"
   },
   "devDependencies": {
-    "dotenv": "^8.0.0",
-    "eslint": "^5.16.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-config-standard-react": "^7.0.2",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-node": "^9.0.1",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-standard": "^4.0.0",
-    "rimraf": "^2.6.3"
+    "dotenv": "^16.0.3",
+    "eslint": "^8.33.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-config-standard-react": "^13.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "prettier-eslint-cli": "^5.0.0",
+    "rimraf": "^4.1.2"
   }
 }
