--- a/studio/package.json
+++ b/studio/package.json
@@ -5,7 +5,8 @@
   "main": "package.json",
   "author": "Sanity <hello@sanity.io>",
   "scripts": {
-    "dev": "sanity start",
+    "start": "sanity start",
+    "dev": "sanity dev",
     "format": "prettier-eslint --write \"**/*.js\" \"!node_modules/**\"",
     "build": "sanity build",
     "graphql-deploy": "sanity graphql deploy --playground",
@@ -13,34 +14,29 @@
     "test": "sanity check"
   },
   "dependencies": {
-    "@sanity/base": "^2.0.7",
-    "@sanity/cli": "^2.0.5",
+    "@babel/eslint-parser": "^7.19.1",
+    "@sanity/cli": "^3.3.1",
     "@sanity/components": "^2.0.7",
-    "@sanity/core": "^2.0.5",
-    "@sanity/dashboard": "^2.0.5",
-    "@sanity/default-layout": "^2.0.7",
-    "@sanity/default-login": "^2.0.5",
-    "@sanity/desk-tool": "^2.0.8",
-    "date-fns": "^1.30.1",
-    "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-player": "^1.14.2",
-
-    "sanity-plugin-dashboard-widget-document-list": "^0.0.8",
-    "sanity-plugin-dashboard-widget-netlify": "^1.0.1",
-    "sanity-plugin-media": "^0.2.10"
+    "@sanity/dashboard": "^3.1.3",
+    "@sanity/vision": "^3.3.1",
+    "date-fns": "^2.29.3",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-player": "^2.11.1",
+    "sanity": "^3.3.1",
+    "sanity-plugin-dashboard-widget-netlify": "^2.0.1",
+    "sanity-plugin-media": "^2.0.5",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-config-standard-react": "^7.0.2",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-node": "^9.0.1",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-standard": "^4.0.0",
-    "prettier-eslint-cli": "^5.0.0"
+    "eslint": "^8.33.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-config-standard-react": "^13.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "prettier-eslint-cli": "^7.1.0"
   }
 }
