--- a/web/package.json
+++ b/web/package.json
@@ -27,7 +27,7 @@
     "gatsby-codemods": "^4.5.0",
     "gatsby-image": "^3.11.0",
     "gatsby-omni-font-loader": "^2.0.2",
-    "gatsby-plugin-google-gtag": "^5.10.0",
+    "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-image": "^3.5.0",
     "gatsby-plugin-manifest": "^5.5.0",
     "gatsby-plugin-react-svg": "^3.3.0",
