--- a/studio/package.json
+++ b/studio/package.json
@@ -10,6 +10,7 @@
     "format": "prettier-eslint --write \"**/*.js\" \"!node_modules/**\"",
     "build": "sanity build",
     "graphql-deploy": "sanity graphql deploy --playground",
+    "graphql-deploy--force": "sanity graphql deploy --playground --force",
     "lint": "eslint .",
     "test": "sanity check"
   },
