--- a/web/package.json
+++ b/web/package.json
@@ -40,6 +40,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.7.1",
+    "react-obfuscate": "^3.6.9",
     "react-player": "^2.11.0",
     "rebass": "^4.0.7",
     "theme-ui": "^0.15.4"
@@ -53,7 +54,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
-    "prettier-eslint-cli": "^5.0.0",
+    "prettier-eslint-cli": "^7.1.0",
     "rimraf": "^4.1.2"
   }
 }
