--- a/studio/package.json
+++ b/studio/package.json
@@ -25,9 +25,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.11.1",
-    "sanity": "^3.3.1",
+    "sanity": "^3.14.3",
     "sanity-plugin-dashboard-widget-netlify": "^2.0.1",
     "sanity-plugin-media": "^2.0.5",
+    "sanity-plugin-mux-input": "^2.0.0-v3-studio.22",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
